[package]
name = "cs50"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
num-traits = "0.2"
regex = "1.8.1"
figlet-rs = "0.1.5"
reqwest = { version = "0.11.17", features = ["blocking"] }
